# Mistral-7B-GRC-Project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_SUMMARY.md  Makefile  README.md  env.template  issues.txt  jupyter_config.py  pyproject.toml
.cursor/: README.md
.cursor/rules/: dependencies.mdc  markdown_in_docs.mdc  no_test_files.mdc  project_structure.mdc  python_style.mdc  qlora_training.mdc
configs/: OOM_FIXES_SUMMARY.md  README_stage_configs.md  qlora_stage_1.yml  qlora_stage_2.yml  qlora_stage_3.yml
data/: README.md
docs/: README.md
models/: .gitkeep
notebooks/: README.md
scripts/: activate.ps1  activate.sh  activate_ubuntu.sh  activate_windows.ps1  setup_ubuntu.sh  setup_windows.ps1  verify_setup.ps1  verify_setup.py  verify_setup.sh
src/: __init__.py  cli.py
src/benchmark/: BUG_FIXES_SUMMARY.md  PERPLEXITY_FIX_EXPLANATION.md  README.md  README_updated.md  benchmark_with_adapters.py
src/fintuning/: README_qlora_usage.md  qlora.py
src/helpers/: CHECKPOINT_DETECTION.md  QUICK_START.md  README.md  SLOW_LOADING_FIX.md  __init__.py  fix_adapter_root.py  merge_adapters.py
src/quntizing/: quantize_model.py
src/run/: README.md  interactive_chat.py  run-with-adapter.py
src/utils/: __init__.py  logger.py
